# devops-deployment-metrics

./: .cookiecutter.json  .env-example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  logging.yaml  noxfile.py  pyproject.toml  requirements.txt  sample-config.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-merge-dependabot-workflow.yaml  benchmark.yaml  codeql.yaml  constraints.txt  labeler.yml  release.yml  tests.yml
dev/bench/: data.js
docs/: conf.py  index.md  reference.md  requirements.txt  threat-model.md  usage.md
docs/architectural_decision_records/: 001-adr-template.md  0017-pip-audit-replaces-safety.md  002-pre-commit-hooks.md  003-github-version-control.md  004-github-actions-for-ci-cd.md  005-secrets-detection.md  006-ci-linting.md  007-python-for-app-fuctionality.md  008-code-formatting.md  009-dependency-scanning.md  010-hypermodern-python-cookie-cutter.md  011-TOML-for-configuration.md  012-auto-merge-dependabot.md  013-dependency-managment.md  014-benchmark.md  015-github-action-runner-hardening.md  016-use-uv-instead-of-poetry.md  README.md
scripts/: block-files.sh
src/devops_deployment_metrics/: __init__.py  __main__.py  config.py  definitions.py  deployments.py  log.py  metrics.py  utils.py  workflow.py  writer.py
src/devops_deployments_metrics/: __init__.py  __main__.py  deployments.py
tests/: __init__.py  conftest.py  test_config.py  test_deployments.py  test_log.py  test_main.py  test_metrics.py  test_utils.py  test_workflow.py  test_writer.py
